package abstractfactory;

/**
 * 抽象工厂
 */
public interface abstractClothes {
    Clothes createClothes(String type);
}
